[tool.poetry]
name = "python-mapgenerator"
version = "0.0.1"
description = "map generator made with python"
authors = ["JeHugawa"]

[tool.poetry.dependencies]
python = "^3.9"
invoke = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
